<resources>
    <string name="app_name" translatable="false">Price Cutz</string>


    <string name="demo_username" translatable="false">Pop H2</string>
    <string name="demo_email" translatable="false">Pop@H2.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_company" translatable="false">CompanyActivity</string>

    <string name="facebook_app_id" translatable="false">356323764721784</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_login" translatable="false">@string/action_sign_in_short</string>

    <!--Content Provider -->
    <string name="content_authority" translatable="false">com.pop.pricecuts.app</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_discount" translatable="false">DiscountActivity</string>
    <string name="title_activity_preference" translatable="false">PreferenceActivity</string>

    <!-- SyncAdapter -->
    <string name="sync_account_type" translatable="false">pricecutz.pop.com</string>
    <string name="sync_account" translatable="false">default_account</string>

    <!-- Strings related to Sync preference -->
    <string name="pref_last_sync" translatable="false">last_sync</string>
    <string name="send">Send</string>
    <string name="log_out">Log Out</string>
    <string name="share">Share</string>
    <string name="communicate">Communicate</string>
    <string name="tools">Tools</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="slideshow">Slideshow</string>
    <string name="gallery">Gallery</string>
    <string name="home">Home</string>
    <string name="near_me">Near Me</string>
    <string name="categories">Categories</string>
    <string name="inventory">Inventory</string>
    <string name="finish">Finish</string>
    <string name="cat_pref_title">Select the categories you are interested in</string>
    <string name="title_activity_discount_category" translatable="false">DiscountCategoryActivity</string>

    <!-- Strings related to Widgets -->
    <string name="title_widget" translatable="false">Nearby Discounts</string>

    <!-- Image Content Description -->
    <string name="item_image" translatable="false">Item Image</string>
    <string name="discount_image" translatable="false">Discount Image</string>
    <string name="company_image" translatable="false">Company Image</string>
    <string name="widget_image" translatable="false">Widget Image</string>
    <string name="app_image" translatable="false">Widget Image</string>


</resources>
