<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_near_me"
            android:icon="@drawable/ic_person_pin_circle_black_24dp"
            android:title="@string/near_me" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_view_module_black_24dp"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_Inventory"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/inventory" />
    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
