<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/near_me" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/inventory" />
    </group>

    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="Profile" />
            <item
                android:id="@+id/nav_log_out"
                android:icon="@drawable/ic_power_settings_new_black_24dp"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
